--- a/MVC/CIPlatform/CIPlatform/Views/Home/Admin_user.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/Admin_user.cshtml
@@ -66,7 +66,7 @@
                 </a>
             </li>
             <li>
-                <a asp-action="Admin_MissionSkills" asp-controller="Home">
+                <a asp-action="Admin_Skills" asp-controller="Home">
                     <i class="fa-solid fa-screwdriver-wrench" aria-hidden="true"></i>
                     <span class='sidebar-menu-text'>Mission Skill</span>
                 </a>
