--- a/MVC/CIPlatform/CIPlatform/Views/Home/EditProfile.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/EditProfile.cshtml
@@ -100,13 +100,14 @@
                         </button>
 
                     </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#">Add Profile</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#">Volunteering Timesheet</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" asp-controller="Home" asp-action="Logout">Logout</a></li>
-                    </ul>
+                   <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" asp-controller="Home" asp-action="EditProfile">My Profile</a></li>
+                            
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" asp-controller="Home" asp-action="Timesheet">Volunteering Timesheet</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" asp-controller="Home" asp-action="Logout">Logout</a></li>
+                        </ul>
                 </div>
 
             </div>
@@ -123,8 +124,7 @@
         <div class="row">
 
             <div class="col-4">
-
-
+                
                 <div class="left-div">
                     <div>
                         <img class="img-left" src="~/NewFolder/user-img-large.png" />
@@ -149,7 +149,7 @@
                                             <span aria-hidden="true">&times;</span>
                                         </button>
                                     </div>
-                                    <form id="change-form" asp-action="ChangeUserPass" asp-controller="Home" method="post">
+                                    <form id="change-form"  method="post">
 
                                         <div class="modal-body">
 
@@ -194,7 +194,7 @@
                     </div>
                 </div>
 
-
+               
             </div>
             <div class="col-6" style="margin-left:5%;">
                 @{
@@ -521,6 +521,7 @@
                                     </textarea>
                                         <span asp-validation-for="Message" class="text-danger" style="font-size:12px;"></span>
                                     </div>
+                                    <input hidden></input>
                                     <br />
                                 </div>
                                 <div class="modal-footer">
