--- a/MVC/CIPlatform/CIPlatform/Views/Home/PlatformLandingPage.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/PlatformLandingPage.cshtml
@@ -98,7 +98,7 @@
                             <li><a class="dropdown-item" asp-controller="Home" asp-action="EditProfile">My Profile</a></li>
                             
                             <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" asp-controller="Home" asp-action="VolTimesheet">Volunteering Timesheet</a></li>
+                            <li><a class="dropdown-item" asp-controller="Home" asp-action="Timesheet">Volunteering Timesheet</a></li>
                             <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item" asp-controller="Home" asp-action="Logout">Logout</a></li>
                         </ul>
