--- a/MVC/CIPlatform/CIPlatform/Views/Home/VolTimesheet.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/VolTimesheet.cshtml
@@ -93,7 +93,7 @@
                 <div class="nav-item dropdown" style="margin-right:15%; width:auto;">
                     <a class="nav-link" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: grey; ">
 
-                        <button class="btn1 dropdown-toggle" style="width:100%; border: none; color: grey" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <button class="btn1 dropdown-toggle" style="width:100%; border: none; color: grey; " type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             @ViewBag.fullname
                         </button>
 
