--- a/MVC/CIPlatform/CIPlatform/wwwroot/css/volLanding.css
+++ b/MVC/CIPlatform/CIPlatform/wwwroot/css/volLanding.css
@@ -325,6 +325,17 @@
     /* margin-left: 38%; */
 }
 
+.cmt-btn {
+    width: 100px;
+    height: 48px;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    border: 2px solid #F88634;
+    border-radius: 24px;
+    color: #F88634;
+   
+    
+}
+
 
 
 
