--- a/MVC/CIPlatform/CIPlatform/Views/Home/CMSPage.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/CMSPage.cshtml
@@ -38,7 +38,7 @@
 
 <div class="wrapper">
     <!-- Sidebar -->
-    <nav id="sidebar" class="collapse-sidebar">
+   <nav id="sidebar" class="collapse-sidebar">
         <div class="sidebar-header">
             <button type="button" id="sidebarCollapse" class="show-sidebar"><i class="fa fa-bars" aria-hidden="true"></i></button>
         </div>
@@ -68,7 +68,7 @@
                 </a>
             </li>
             <li>
-                <a asp-action="MissionSkillspage" asp-controller="Admin">
+                <a asp-action="Admin_Skills" asp-controller="Home">
                     <i class="fa-solid fa-screwdriver-wrench" aria-hidden="true"></i>
                     <span class='sidebar-menu-text'>Mission Skill</span>
                 </a>
@@ -80,7 +80,7 @@
                 </a>
             </li>
             <li>
-                <a asp-action="Storypage" asp-controller="Admin">
+                <a asp-action="Admin_Story" asp-controller="Home">
                     <i class="fa-solid fa-book-bookmark" aria-hidden="true"></i>
                     <span class='sidebar-menu-text'>Story</span>
                 </a>
