--- a/MVC/CIPlatform/CIPlatform/Views/Home/VolunteeringMission.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/VolunteeringMission.cshtml
@@ -779,10 +779,19 @@
 
                                                     Declined
 
-                                                </button>
-                                                break;
+                                                    </button>
+                                                    break;
+                                                }
+                                                else
+                                                {
+                                                    <button disabled type="submit" class="btn btn-outline-secondary apply-btn" style="width:50%; height:65%; border: 2px solid grey;background:black; color:white;">
+
+                                                        Wait until admin approves your mission
+
+                                                    </button>
+                                                    break;
+                                                }
                                             }
-                                    }
                                 }
                                 }
                                 }
