--- a/MVC/CIPlatform/CIPlatform/Views/Home/Admin_Skills.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/Admin_Skills.cshtml
@@ -79,7 +79,7 @@
                 </a>
             </li>
             <li>
-                <a asp-action="Storypage" asp-controller="Admin">
+                <a asp-action="Admin_Story" asp-controller="Home">
                     <i class="fa-solid fa-book-bookmark" aria-hidden="true"></i>
                     <span class='sidebar-menu-text'>Story</span>
                 </a>
