--- a/MVC/CIPlatform/CIPlatform/Views/Shared/_Grid.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Shared/_Grid.cshtml
@@ -6,14 +6,14 @@
 <head>
 
     <link rel="stylesheet" href="~/css/platformlandingpage.css">
-     <link rel="stylesheet" href="~/css/storylisting.css">
+    <link rel="stylesheet" href="~/css/storylisting.css">
 
 </head>
 
 @using (Html.BeginForm("_Grid", "Home", FormMethod.Get))
-@if (ViewBag.SearchStatus == 0)
+    @if (ViewBag.SearchStatus == 0)
     {
-        
+
 
         <div class="container">
 
@@ -52,8 +52,21 @@
             <div class="card" style="box-shadow: 3px 3px 3px grey;
     border: 1px solid #D9D9D9;
     border-radius: 3px;">
-                <img src="~/NewFolder/imgenv.png" class="card-img-top" alt="...">
+                @*    <img src="~/NewFolder/imgenv.png" class="card-img-top" alt="...">*@
+                @{
 
+
+
+                    foreach (var missionimg in ViewBag.missionmedia)
+                    {
+                        if (missionimg.MissionId == item.MissionId)
+                        {
+
+                            <img class="card-img-top" src="~/NewFolder/@missionimg.MediaPath" />
+
+                        }
+                    }
+                }
                 <div>
 
 
@@ -64,17 +77,17 @@
                         {
                             if (ViewBag.Missionapplication[k].MissionId == item.MissionId && ViewBag.Missionapplication[k].UserId == ViewBag.ids)
                             {
-                                if(ViewBag.Missionapplication[k].ApprovalStatus == "approved")
+                                if (ViewBag.Missionapplication[k].ApprovalStatus == "approved")
                                 {
-                                   <div class="applied">
-                                    <button class="btn" style="color:white; font-size:17px;"><b>APPLIED</b></button>
+                                    <div class="applied">
+                                        <button class="btn" style="color:white; font-size:17px;"><b>APPLIED</b></button>
                                     </div>
-                                    break; 
+                                    break;
                                 }
-                                else if(ViewBag.Missionapplication[k].ApprovalStatus == "declined")
+                                else if (ViewBag.Missionapplication[k].ApprovalStatus == "declined")
                                 {
                                     <div class="declined">
-                                    <button class="btn" style="color:white; font-size:17px;"><b>DECLINED</b></button>
+                                        <button class="btn" style="color:white; font-size:17px;"><b>DECLINED</b></button>
                                     </div>
                                     break;
                                 }
@@ -94,9 +107,9 @@
                                     }
                                     else
                                     {
-                                   
 
-                                        
+
+
                                         <div class="applied" hidden><button class="btn" style="color:white; font-size:18px;"></button></div>
                                     }
                                 }
@@ -127,7 +140,7 @@
                                 {
                                     if (item.CityId == citytbl.CityId)
                                     {
-                                       
+
 
                                         <div class="row">
                                             <div class="col-5 citydivbtn">
